# 30day-agent

./: .gitignore  .gitmodules  30day_agent_learning_plan.html  README.md  fix_day12.py  pyproject.toml
.claude/: settings.local.json
doc/: 30day_agent_learning_plan.html  LangCode开发遇到的问题.md  claude-advice.md  learning_plan_detail.md
src/: day1-2.ipynb  day10-11.ipynb  day12.ipynb  day13.ipynb  day14.ipynb  day3.ipynb  day4.ipynb  day5-6.ipynb  day7.ipynb  day8-9.ipynb  langgraph.ipynb
