[project]
name = "30day-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grandalf>=0.8",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.2",
    "langchain-openrouter>=0.2.3",
    "langgraph>=1.2.2",
]
