[project]
name = "30day-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grandalf>=0.8",
    "langchain>=1.3.4",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.2",
    "langchain-openrouter>=0.2.3",
    "langgraph>=1.2.2",
    "pydantic>=2.13.4",
    "psutil>=5.9.0",
    "notebook>=7.5.7",
    "pip>=26.1.2",
    "instructor>=1.15.1",
    "mcp>=1.27.2",
    "langchain-mcp-adapters>=0.1.0",
]

[tool.uv.workspace]
members = [
    "LangCode",
]
